syntax = "proto3";

package wps;
option go_package = 'logi/src/proto/wps';

message File {
    string id = 1;
    string name = 2;
    uint32 version = 3;
    uint32 size = 4;
    string creator = 5;
    uint32 create_time = 6;
    string modifier = 7;
    uint32 modify_time = 8;
    string download_url = 9;
    uint32 preview_pages = 10;
    UserAcl user_acl = 11;
    Watermark Watermark = 12;
    message UserAcl {
        uint32 rename = 1;
        uint32 history = 2;
        uint32 copy = 3;
        uint32 export = 4;
        uint32 print = 5;
    }
}

message Watermark {
    uint32 type = 1;
}

message WpsUser {
    string id = 1;
    string name = 2;
    string permission = 3;
    string avatar_url = 4;
}

message FileInfoRequest {
    int32 _w_file_id = 1;
    FileType _w_file_type = 2;
}

message FileInfoResponse {
    File file = 1;
    WpsUser user = 2;
}

message FileSaveRequest {
    int32 _w_file_id = 1;
    FileType _w_file_type = 2;
    bytes file = 3;
}

message FileSaveResponse {
    File file = 1;
}

message UserInfoRequest {
    repeated string ids = 1;
}

message UserInfoResponse {
    repeated WpsUser users = 1;
}

message FileHistoryRequest {
    string id = 1;
    uint32 offset = 2;
    uint32 count = 3;
}

message FileHistoryResponse {
    repeated File histories = 1;
    message File {
        string id = 1;
        string name = 2;
        uint32 version = 3;
        uint32 size = 4;
        string download_url = 5;
        uint32 create_time = 6;
        uint32 modify_time = 7;
        WpsUser creator = 8;
        WpsUser modifier = 9;
    }
}

message FileVersionResponse {
    File file = 1;
}

enum FileType {
    FILE_TYPE_UNSPECIFIED = 0;
    FILE_TYPE_REPORT = 1;
    FILE_TYPE_EXCEL = 2;
    FILE_TYPE_IMAGE = 3;
    FILE_TYPE_REPORT_TEMPLATE = 4;
}

message WpsUrlParams {
    string file_id = 1;
    FileType file_type = 2;
    int32 version_id = 3;
    int32 token_type = 4;
    string wps_type = 5;
    string user_id = 6;
}

message WpsUrlResponse {
    string url = 1;
}
